package com.rozgarmitra.in.Enum;

public enum Role {
    ROLE_CUSTOMER,ROLE_ADMIN,ROLE_LABOUR;
}
