package com.rozgarmitra.in.Enum;

public enum TaskStatus {
    PENDING,    // Jab customer request dale
    ACCEPTED, // Jab labour accept kar le
    STARTED,
    COMPLETED,  // Jab kaam khatam ho jaye
    CANCELLED,   // Jab koi reject/cancel kar de
    REJECTED
}